# ES-2T-Cam-Generator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  license.md
clock/: lc.txt  line_count_default.txt
dependencies/submodules/: CMakeLists.txt
engine/include/: draw.hpp  event.hpp  glyph_renderer.hpp  window.hpp
engine/src/: draw.cpp  rect.cpp  window.cpp
include/: app.hpp  generator.hpp  ui.hpp  units.hpp
resources/shaders/: 2d_fragment_shader.frag  2d_vertex_shader.vert
src/: app.cpp  generator.cpp  main.cpp  ui.cpp
